--- a/explore/src/main/res/values/strings.xml
+++ b/explore/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="explore_title">Repositories</string>
     <string name="stargazers">%1$s Stargazers</string>
     <string name="forks_under_construction">%1$s Forks under construction</string>
-    <string name="error_message">Having a bit of trouble finding those repositories!</string>
+    <string name="list_error">Having a bit of trouble finding those repositories!</string>
+    <string name="details_error">Having a bit of trouble finding this repository!</string>
 </resources>
